--- a/회원가입.html
+++ b/회원가입.html
@@ -40,7 +40,7 @@
 
             <br>
             </form>
-            <form action="ex1.html">
+            <form action="프로필.html">
                  <input type="submit" value="확인">
                  <input type="reset" value="취소">
             </form>
