--- a/루바토펜션.html
+++ b/루바토펜션.html
@@ -20,14 +20,14 @@
 <ul>
 <li>주소: 충청남도 천안시 호서대길 12 </li>
 <li>전화번호:010-6372-7604</li>
-<li>객실 수:100개</li>
+<li>객실 수:137개</li>
 <li>부대시설:한식당,눈썰매장,탁구장,수영장</li>
-<li>담당자: <a href="https://dagyun.github.io/">백승은</a> </li>
+<li>담당자: <a href="프로필.html">백승은</a> </li>
 </ul>
 
 
 <span>다양한 객실이 준비되어 있어요. 예약을 원하시는 분은 전화주세요. 애완동물도 동반 가능합니다. 감사합니다.^^</span> <br><br>
 
-<a href="https://dagyun.github.io/">되돌아가기</a>
+<a href="index.html">되돌아가기</a>
 </body>
 </html>
