--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
         <h3>
             <a href="주말 야간 개장 안내.html" target="_blank">야간 개장 안내</a>
         </h3>
+        <h3>
+            <a href="세일 안내장.html" target="_blank">세일 안내장</a>
+        </h3>
 
 
     </body>
