월간일정표

--- a/월간 일정표.html
+++ b/월간 일정표.html
@@ -70,7 +70,7 @@ text-shadow: 2px 2px 10px palevioletred;}
       <th>23</th>
       <th>24</th>
       <th>25</th>
-      <th>26</th>
+      <th>26<br><br>친구랑 놀러가는 날</th>
 	  <th id="red">27<br>{부처님오신날}<br><h4 id="black">알바</h4></th>
    </tr>
  
