--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
         <h3>
             <a href="세일 안내장.html" target="_blank">세일 안내장</a>
         </h3>
+        <h3>
+            <a href="월간 일정표.html" target="_blank">월간 일정표</a>
+        </h3>
 
 
     </body>
