호서기타페스티벌

--- a/제 1회 호서 국제 기타 페스티벌 안내.html
+++ b/제 1회 호서 국제 기타 페스티벌 안내.html
@@ -27,7 +27,7 @@
     <li><b>일시</b> : 2023년 07월 15일 ~ 08월 15일</li>
     <li><b>장소</b> : <span class="green"><span class="line">호서대학교 대강당</span></span></li>
     <li><b>주최</b> : 호서대학교 디지털기술경영학과</li>
-    <li><b>사회</b> : <span class="blue"><span class="shadow">20220347 백승은</span></span></li> 
+    <li><b>사회</b> : <span class="blue"><span class="shadow"><a href="프로필.html"><span class="blue"></span>20220347 백승은</span></span></li> 
     <li><b>문의사항</b> : </li>
     <textarea rows="6" cols="50"></textarea>
 </ul>
