--- a/문의사항제출.html
+++ b/문의사항제출.html
@@ -16,7 +16,7 @@
         <h4><b>고맙습니다.</b></h4>
 
         <p><a href="제 1회 호서 국제 기타 페스티벌 안내.html">[되돌아가기]</a>
-           <a href="메롱.html">[첫 화면으로]</a></p>
+           <a href="index.html">[첫 화면으로]</a></p>
 
     </body>
 </html>
