야간 신청접수 수정

--- a/야간개장 신청접수완료 화면.html
+++ b/야간개장 신청접수완료 화면.html
@@ -16,7 +16,7 @@
         <h4><b>고맙습니다.</b></h4>
 
         <p><a href="주말 야간 개장 안내.html">[되돌아가기]</a>
-           <a href="메롱.html">[첫 화면으로]</a></p>
+           <a href="index.html">[첫 화면으로]</a></p>
 
     </body>
 </html>
