--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
         <h3>
             <a href="월간 일정표.html" target="_blank">월간 일정표</a>
         </h3>
+        <h3>
+            <a href="쇼핑몰 판매 목록.html" target="_blank">쇼핑몰 판매 목록</a>
+        </h3>
 
 
     </body>
