옛날인덱스

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
    
 </table>
         <h3>
-            <a href="form_test.html" target="_blank">회원가입</a>
+            <a href="회원가입.html" target="_blank">회원가입</a>
         </h3>
         <h3>
-            <a href="루바토 펜션.html" target="_blank">루바토 펜션 안내</a>
+            <a href="루바토펜션.html" target="_blank">루바토 펜션 안내</a>
         </h3>
         <h3>
             <a href="제 1회 호서 국제 기타 페스티벌 안내.html" target="_blank">제 1회 호서 국제 기타 페스티벌 안내</a>
