--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
                     &nbsp;&nbsp;/&nbsp;&nbsp;
 
                     <a href="쇼핑몰 판매 목록.html">판매 목록</a>
-                    
+                    &nbsp;&nbsp;/&nbsp;&nbsp;
+
+                    <a href="포토아카데미.html">포토 아카데미</a>
+
+
                 </nav>
 
 
