포토 아카뎀;

--- a/포토아카데미.html
+++ b/포토아카데미.html
@@ -6,14 +6,12 @@
 /*  기본틀 만들기 */
 
 * {padding: 0px; margin:0px;}
-header {
-      /* background-color: red; */
+header { /* background-color: red; */
 height: 100px;
 width: 1140px;
 margin: 0 auto;}
 
-#main_img {
-       /* background-color: blue; */
+#main_img { /* background-color: blue; */
 height: 250px;
 width: 100%;}
 
@@ -21,13 +19,11 @@ width: 100%;}
 width: 1140px;
 margin: 0 auto;}
 
-#sub_menu {
-      /* background-color: pink; */
+#sub_menu { /* background-color: pink; */
 width: 234px;
 float: left;}
 
-#main_contents{
-      /* background-color: orange; */
+#main_contents{ /* background-color: orange; */
 width: 880px;
 float: right;}
 
@@ -38,6 +34,7 @@ height: 150px;}
 .clear {clear: both;}
 
 /* header stylesheet */
+
 #logo {float: left;
 margin: 20px 0px 0px 20px;}
 
@@ -46,30 +43,28 @@ margin: 20px 0px 0px 20px;}
 #main_menu li {
       display: inline;
       list-style-type: none;
-      margin-left: 80px;
-}
+      margin-left: 80px;}
 
 #main_menu {
       font-size: 20px;
       margin-top: 20px;
-      font-family: "맑은고딕";
-}
+      font-family: "맑은고딕";}
 
 #top_menu {
       margin-top: 20px;
-      text-align: right;
-}
+      text-align: right;}
 
 
 
 /* main_img stylesheet */
+
 #main_img {
       background-image: url('main_img.png');
       background-repeat: no-repeat;
-      background-position: top center;
-}
+      background-position: top center;}
 
 /* contents stylesheet */
+
 #sub_menu {margin-top: 25px;}
 #sub_menu h3 {
       font-size: 18px;
@@ -100,37 +95,30 @@ margin: 20px 0px 0px 20px;}
 #main_contents li {list-style-type: none;
                         padding: 5px;}
 
-
 /* footer stylesheet */
 
 #footer_logo {
       float: left;
       margin-top: 50px;
-      margin-left: 30px;
-}
+      margin-left: 30px;}
 
 #footer_box {
       margin: 0 auto;
-      width: 1300px;
-}
+      width: 1300px;}
 
 #address {
       float: right;
       margin: 50px 30px 0px 0px;
-      color: white;
-}
+      color: white;}
 
 #address li {
-      list-style-type: none;
-}
-
+      list-style-type: none;}
 
  
 </style>
 </head>
 
 <body>
-
 <header>
       <div id="logo">
             <img src="logo.png">
@@ -148,7 +136,6 @@ margin: 20px 0px 0px 20px;}
                 <li>커뮤니티</li>
             </ul>
       </nav>
-
 </header>
 
 <section id='main_img'>
@@ -157,13 +144,13 @@ margin: 20px 0px 0px 20px;}
 <section id='contents'>
      <nav id='sub_menu'>
       <h3>사진이론</h3>
-      <ul>
+          <ul>
             <li>카메라 동작 원리</li>
             <li>무조건 찍어보자!</li>
             <li>피사체의 배경</li>
             <li>조리개와 심도</li>
             <li>카메라 촬영 모드</li>
-      </ul>
+          </ul>
      </nav>
    
       <div id='main_contents'>
@@ -200,7 +187,6 @@ margin: 20px 0px 0px 20px;}
                     <li>TEL:031-123-1234 Email : email@domain.com</li>
                     <li>COPYRIGHT (C) 루바토 ALL RIGHTS RESERVED</li>
                 </ul>
-      
             </div>
 
       </div>
